--- a/contactme.html
+++ b/contactme.html
@@ -14,7 +14,7 @@
     <nav>
       <ul id="navigation">
         <li>
-          <a href="main.html">Home</a>
+          <a href="index.html">Home</a>
         </li>
         <li>
           <a href="aboutme.html">About me</a>
