--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/aboutme.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Sofia"
@@ -40,11 +40,11 @@
     </div>
 
     <aside>
-      <h3 align="right">Соцсети в которых вы можете меня найти:</h3>
-      <p align="right">instagram: llirik_for_life</p>
-      <p align="right">youtube: Kirill1us</p>
-      <p align="right">vk: Кирилл Семёнов</p>
-      <p align="right">steam: spaidi218</p>
+      <h3>Соцсети в которых вы можете меня найти:</h3>
+      <p>instagram: llirik_for_life</p>
+      <p>youtube: Kirill1us</p>
+      <p>vk: Кирилл Семёнов</p>
+      <p>steam: spaidi218</p>
     </aside>
     <footer>
       <p>&copy;Kirill Semenov</p>
