--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
+    <link
+      rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Sofia"
     />
   </head>
@@ -35,7 +40,17 @@
 
     <aside>
       <h3>Соцсети в которых вы можете меня найти:</h3>
+      <a
+        href="https://www.instagram.com/llirik_for_life/"
+        target="_blank"
+        class="fa fa-instagram"
+      ></a>
       <p>instagram: llirik_for_life</p>
+      <a
+        href="https://www.youtube.com/channel/UCh18hXz_eIEyIAHRoI4EEKA"
+        target="_blank"
+        class="fa fa-youtube"
+      ></a>
       <p>youtube: Kirill1us</p>
       <p>vk: Кирилл Семёнов</p>
       <p>steam: spaidi218</p>
