--- a/aboutme.html
+++ b/aboutme.html
@@ -24,10 +24,10 @@
         </li>
       </ul>
     </nav>
-
+    <h1 id="test">Про меня</h1>
     <div class="content">
-      <h1 id="test">Про меня</h1>
-      <p>
+      <img src="img/ass.jpg" class="img_content" alt="Assassin's creed" />
+      <p class="text_content">
         Меня зовут Кирилл Семёнов и мне 12 лет. Я живу в Киеве (Украина).
         Получаю знания в 157 лицее. У меня много друзей и я часто с ними гуляю и
         общаюсь. Я живу с родителями, моя сестра учиться в Берлине. Занимаюсь
@@ -37,6 +37,8 @@
         такие как: CS:GO и Assassin's creed. Вы можете узнать меня под ником
         spaidi218.
       </p>
+
+      <!--<img src="img"-->
     </div>
 
     <aside>
