--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Sofia"
     />
+    <link rel="stylesheet" href="https://fontawesome.com/v4.7.0/icon/vk" />
   </head>
   <body>
     <nav>
@@ -45,15 +45,22 @@
         target="_blank"
         class="fa fa-instagram"
       ></a>
-      <p>instagram: llirik_for_life</p>
+      <!-- <p>instagram: llirik_for_life</p> -->
       <a
         href="https://www.youtube.com/channel/UCh18hXz_eIEyIAHRoI4EEKA"
         target="_blank"
         class="fa fa-youtube"
       ></a>
-      <p>youtube: Kirill1us</p>
-      <p>vk: Кирилл Семёнов</p>
-      <p>steam: spaidi218</p>
+      <!-- <p>youtube: Kirill1us</p> -->
+      <a class="fa fa-vk" target="_blank" href=""></a>
+      <!-- <p>vk: Кирилл Семёнов</p> -->
+      <!-- <button style="font-size: 24px;"><i class="fa fa-steam"></i></button> -->
+      <a
+        href="https://steamcommunity.com/profiles/76561199049462440/"
+        target="_blank"
+        class="fa fa-steam"
+      ></a>
+      <!-- <p>steam: spaidi218</p> -->
     </aside>
     <footer>
       <p>&copy;Kirill Semenov</p>
