--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       href="https://fonts.googleapis.com/css?family=Sofia"
     />
     <link rel="stylesheet" href="https://fontawesome.com/v4.7.0/icon/vk" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;400&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav>
@@ -39,7 +43,7 @@
     </div>
 
     <aside>
-      <h3>Соцсети в которых вы можете меня найти:</h3>
+      <p>Соцсети в которых вы можете меня найти:</p>
       <a
         href="https://www.instagram.com/llirik_for_life/"
         target="_blank"
