--- a/contactme.html
+++ b/contactme.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact me</title>
-    <!-- <link rel="stylesheet" type="text/css" href="css/contactme.css" /> -->
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Sofia"
@@ -15,6 +15,7 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" type="text/css" href="css/contactme_bootstrap.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -64,7 +65,7 @@
             </div>
           </li> -->
         </ul>
-        <form class="form-inline my-2 my-lg-0">
+        <!-- <form class="form-inline my-2 my-lg-0">
           <input
             class="form-control mr-sm-2"
             type="search"
@@ -74,11 +75,28 @@
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
             Search
           </button>
-        </form>
+        </form> -->
       </div>
     </nav>
-
-    <div class="content">
+    <div class="container mt-5 mb-5 ">
+      <div class="row ">
+        <div class=" text-center col-sm-6 
+        col-xs-12">
+          <h1 id="test">Как со мной можно связаться</h1>
+          <p class="mt-3">
+            Я состою в различных соцсетях в которых вы с легкостью можете найти
+            меня и написать мне в директ.
+          </p>
+        </div>
+        <div class="text-center col-sm-6 col-xs-12"><h1>Соцсети в которых вы можете меня найти:</h3>
+          <p class="mt-3">instagram: llirik_for_life</p>
+          <p>youtube: Kirill1us</p>
+          <p>vk: Кирилл Семёнов</p>
+          <p>steam: spaidi218</p></div></div>
+      </div>
+      <div class="row">
+    </div>
+    <!-- <div class="content flex-shrink-0">
       <h1 id="test">Как со мной можно связаться</h1>
       <p>
         Я состою в различных соцсетях в которых вы с легкостью можете найти меня
@@ -86,15 +104,17 @@
       </p>
     </div>
 
-    <aside>
-      <h3>Соцсети в которых вы можете меня найти:</h3>
+    <div class="content flex-shrink-0">
+      <h1>Соцсети в которых вы можете меня найти:</h3>
       <p>instagram: llirik_for_life</p>
       <p>youtube: Kirill1us</p>
       <p>vk: Кирилл Семёнов</p>
       <p>steam: spaidi218</p>
-    </aside>
-    <footer>
-      <p>&copy;Kirill Semenov</p>
+    </div> -->
+    <footer class="footer mt-auto py-3">
+      <div class="container">
+        <span class="text-muted">&copy;Kirill Semenov</span>
+      </div>
     </footer>
   </body>
   <script
