--- a/aboutme.html
+++ b/aboutme.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Sofia"
     />
+    <link rel="stylesheet" href="https://fontawesome.com/v4.7.0/icon/vk" />
   </head>
   <body>
     <nav>
@@ -26,7 +27,6 @@
     </nav>
     <h1 id="test">Про меня</h1>
     <div class="content">
-      <img src="img/ass.jpg" class="img_content" alt="Assassin's creed" />
       <p class="text_content">
         Меня зовут Кирилл Семёнов и мне 12 лет. Я живу в Киеве (Украина).
         Получаю знания в 157 лицее. У меня много друзей и я часто с ними гуляю и
@@ -42,11 +42,28 @@
     </div>
 
     <aside>
-      <h3>Соцсети в которых вы можете меня найти:</h3>
-      <p>instagram: llirik_for_life</p>
-      <p>youtube: Kirill1us</p>
-      <p>vk: Кирилл Семёнов</p>
-      <p>steam: spaidi218</p>
+      <p>Соцсети в которых вы можете меня найти:</p>
+      <a
+        href="https://www.instagram.com/llirik_for_life/"
+        target="_blank"
+        class="fa fa-instagram"
+      ></a>
+      <!-- <p>instagram: llirik_for_life</p> -->
+      <a
+        href="https://www.youtube.com/channel/UCh18hXz_eIEyIAHRoI4EEKA"
+        target="_blank"
+        class="fa fa-youtube"
+      ></a>
+      <!-- <p>youtube: Kirill1us</p> -->
+      <a class="fa fa-vk" target="_blank" href=""></a>
+      <!-- <p>vk: Кирилл Семёнов</p> -->
+      <!-- <button style="font-size: 24px;"><i class="fa fa-steam"></i></button> -->
+      <a
+        href="https://steamcommunity.com/profiles/76561199049462440/"
+        target="_blank"
+        class="fa fa-steam"
+      ></a>
+      <!-- <p>steam: spaidi218</p> -->
     </aside>
     <footer>
       <p>&copy;Kirill Semenov</p>
