--- a/aboutme.html
+++ b/aboutme.html
@@ -7,9 +7,17 @@
     <link rel="stylesheet" type="text/css" href="css/aboutme.css" />
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Sofia"
     />
     <link rel="stylesheet" href="https://fontawesome.com/v4.7.0/icon/vk" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;400&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav>
@@ -23,10 +31,14 @@
         <li>
           <a href="contactme.html">Contact me</a>
         </li>
+        <li>
+          <a href="myprojects.html">Projects</a>
+        </li>
       </ul>
     </nav>
-    <h1 id="test">Про меня</h1>
     <div class="content">
+      <h1 id="test">Про меня</h1>
+
       <p class="text_content">
         Меня зовут Кирилл Семёнов и мне 12 лет. Я живу в Киеве (Украина).
         Получаю знания в 157 лицее. У меня много друзей и я часто с ними гуляю и
