--- a/contactme.html
+++ b/contactme.html
@@ -45,6 +45,9 @@
               >Contact me<span class="sr-only">(current)</span></a
             >
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="myprojects.html">Projects</a>
+          </li>
           <!-- <li class="nav-item dropdown">
             <a
               class="nav-link dropdown-toggle"
