--- a/myprojects.html
+++ b/myprojects.html
@@ -47,45 +47,28 @@
           <li class="nav-item active">
             <a class="nav-link" href="myprojects.html">Projects</a>
           </li>
-          <!-- <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                Dropdown
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li> -->
         </ul>
-        <!-- <form class="form-inline my-2 my-lg-0">
-            <input
-              class="form-control mr-sm-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-              Search
-            </button>
-          </form> -->
       </div>
     </nav>
-    <div class="container mt-5 mb-5 border">
+    <div class="container mt-5 mb-5 border p-3">
+      <div class="card col-xs-12">
+        <!-- <img class="card-img-top" src="..." alt="Card image cap" /> -->
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- <div class="container mt-5 mb-5 border">
       <div class="row">
         <div class="col-xs-12">
           <p>Название 1</p>
         </div>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
