--- a/contactme.html
+++ b/contactme.html
@@ -35,7 +35,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="aboutme.html">About me</a>
@@ -114,7 +114,7 @@
       <p>vk: Кирилл Семёнов</p>
       <p>steam: spaidi218</p>
     </div> -->
-    <footer class="footer mt-auto py-3">
+    <footer class="footer mt-auto py-2">
       <div class="container">
         <span class="text-muted">&copy;Kirill Semenov</span>
       </div>
