--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="css/index_bootstrap.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -42,13 +42,13 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="aboutme.html">About me</a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="contactme.html"
               >Contact me<span class="sr-only">(current)</span></a
             >
@@ -56,64 +56,9 @@
           <li class="nav-item">
             <a class="nav-link" href="myprojects.html">Projects</a>
           </li>
-          <!-- <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Dropdown
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li> -->
         </ul>
-        <!-- <form class="form-inline my-2 my-lg-0">
-          <input
-            class="form-control mr-sm-2"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
-          />
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-            Search
-          </button>
-        </form> -->
       </div>
     </nav>
-    <!-- <nav>
-      <ul id="navigation">
-        <li>
-          <a href="index.html">Home</a>
-        </li>
-        <li>
-          <a href="aboutme.html">About me</a>
-        </li>
-        <li>
-          <a href="contactme.html">Contact me</a>
-        </li>
-        <li>
-          <a href="myprojects.html">Projects</a>
-        </li>
-      </ul>
-    </nav> -->
-
-    <!-- <div class="content">
-      <h1 id="test">Сайт визитка Кирилла Семёнова</h1>
-      <p>
-        Меня зовут Кирилл семёнов и это мой сайт визитка. В нем я розкажу про
-        себя, например: что я люблю делать.
-      </p>
-    </div>
-
     <aside>
       <p>Соцсети в которых вы можете меня найти:</p>
       <a
@@ -121,43 +66,27 @@
         target="_blank"
         class="fa fa-instagram"
       ></a>
-      <-- <p>instagram: llirik_for_life</p> -->
-      <!-- <a
+      <!-- <p>instagram: llirik_for_life</p> -->
+      <a
         href="https://www.youtube.com/channel/UCh18hXz_eIEyIAHRoI4EEKA"
         target="_blank"
         class="fa fa-youtube"
       ></a>
-      <-- <p>youtube: Kirill1us</p> -->
-      <!-- <a class="fa fa-vk" target="_blank" href=""></a> -->
+      <!-- <p>youtube: Kirill1us</p> -->
+      <a class="fa fa-vk" target="_blank" href=""></a>
       <!-- <p>vk: Кирилл Семёнов</p> -->
       <!-- <button style="font-size: 24px;"><i class="fa fa-steam"></i></button> -->
-      <!-- <a
+      <a
         href="https://steamcommunity.com/profiles/76561199049462440/"
         target="_blank"
         class="fa fa-steam"
       ></a>
-      <-- <p>steam: spaidi218</p> -->
-    <!-- </aside> -->
-    <div class="container mt-5 mb-5 ">
-      <div class="row ">
-        <div class=" text-center col-sm-6 
-        col-xs-12">
-          <h1 id="test">Сайт визитка Кирилла Семёнова</h1>
-          <p class="mt-3">
-            Меня зовут Кирилл семёнов и это мой сайт визитка. В нем я розкажу про
-            себя, например: что я люблю делать.
-          </p>
-        </div>
-        <div class="text-center col-sm-6 col-xs-12"><h1>Соцсети в которых вы можете меня найти:</h3>
-          <p class="mt-3">instagram: llirik_for_life</p>
-          <p>youtube: Kirill1us</p>
-          <p>vk: Кирилл Семёнов</p>
-          <p>steam: spaidi218</p></div></div>
+      <!-- <p>steam: spaidi218</p> -->
+    </aside>
+    <footer class="footer mt-auto py-2">
+      <div class="container">
+        <span class="text-muted">&copy;Kirill Semenov</span>
       </div>
-      <div class="row">
-    </div>
-    <footer>
-      <p>&copy;Kirill Semenov</p>
     </footer>
   </body>
 </html>
