--- a/index.html
+++ b/index.html
@@ -64,6 +64,41 @@
         </ul>
       </div>
     </nav>
+    <div class="container border mt-3 ml-3 mb-1 p-3 float-left">
+      <div class="row d-flex justify-content-center">
+        <div class="text-left col-xs-12 col-md-10">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec
+            odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla
+            quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent
+            mauris. Fusce nec tellus sed augue semper porta. Mauris massa.
+            Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad
+            litora torquent per conubia nostra, per inceptos himenaeos.
+            Curabitur sodales ligula in libero. Sed dignissim lacinia nunc.
+            Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem
+            at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut
+            ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel,
+            suscipit quis, luctus non, massa. Fusce ac turpis quis ligula
+            lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel,
+            tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit.
+            Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+            per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non
+            tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante
+            quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc
+            feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin
+            quam. Etiam ultrices. Suspendisse in justo eu magna luctus suscipit.
+            Sed lectus. Integer euismod lacus luctus magna. Quisque cursus,
+            metus vitae pharetra auctor, sem massa mattis sem, at interdum magna
+            augue eget diam. Vestibulum ante ipsum primis in faucibus orci
+            luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie
+            dui. Praesent blandit dolor. Sed non quam. In vel mi sit amet augue
+            congue elementum. Morbi in ipsum sit amet pede facilisis laoreet.
+            Donec lacus nunc, viverra nec.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div></div>
     <!-- <aside>
       <p>Соцсети в которых вы можете меня найти:</p>
       <a
@@ -89,9 +124,24 @@
       <p>steam: spaidi218</p>
     </aside>-->
     <footer class="footer mt-auto py-2">
-      <div class="container">
+      <div class="container" id="hallo">
         <span class="text-muted">&copy;Kirill Semenov</span>
       </div>
     </footer>
   </body>
+  <script
+    src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"
+  ></script>
 </html>
