--- a/myprojects.html
+++ b/myprojects.html
@@ -57,7 +57,7 @@
     </nav>
     <div class="container mt-5 mb-5 p-3">
       <div class="row p-3 d-flex justify-content-center">
-        <div class="card col-xs-12 col-md-3">
+        <div class="card col-xs-11 col-md-3">
           <img
             class="card-img-top img-fluid mt-3"
             src="img/program.png"
@@ -71,7 +71,39 @@
             </p>
           </div>
         </div>
-        <div class="card col-xs-12 col-md-3 ml-5 mr-5">
+        <div class="card col-xs-11 col-md-3 ml-5 mr-5">
+          <!-- <img class="card-img-top" src="..." alt="Card image cap" /> -->
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card col-xs-11 col-md-3">
+          <!-- <img class="card-img-top" src="..." alt="Card image cap" /> -->
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="row p-3 d-flex justify-content-center">
+        <div class="card col-xs-11 col-md-3">
+          <!-- <img class="card-img-top" src="..." alt="Card image cap" /> -->
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card col-xs-11 col-md-3 ml-5 mr-5">
           <!-- <img class="card-img-top" src="..." alt="Card image cap" /> -->
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -93,7 +125,7 @@
         </div>
       </div>
       <div class="row p-3 d-flex justify-content-center">
-        <div class="card col-xs-12 col-md-3">
+        <div class="card col-xs-11 col-md-3">
           <!-- <img class="card-img-top" src="..." alt="Card image cap" /> -->
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -103,7 +135,7 @@
             </p>
           </div>
         </div>
-        <div class="card col-xs-12 col-md-3 ml-5 mr-5">
+        <div class="card col-xs-11 col-md-3 ml-5 mr-5">
           <!-- <img class="card-img-top" src="..." alt="Card image cap" /> -->
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -113,39 +145,7 @@
             </p>
           </div>
         </div>
-        <div class="card col-xs-12 col-md-3">
-          <!-- <img class="card-img-top" src="..." alt="Card image cap" /> -->
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="row p-3 d-flex justify-content-center">
-        <div class="card col-xs-12 col-md-3">
-          <!-- <img class="card-img-top" src="..." alt="Card image cap" /> -->
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-          </div>
-        </div>
-        <div class="card col-xs-12 col-md-3 ml-5 mr-5">
-          <!-- <img class="card-img-top" src="..." alt="Card image cap" /> -->
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-          </div>
-        </div>
-        <div class="card col-xs-12 col-md-3">
+        <div class="card col-xs-11 col-md-3">
           <!-- <img class="card-img-top" src="..." alt="Card image cap" /> -->
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -170,4 +170,19 @@
       </div>
     </div> -->
   </body>
+  <script
+    src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"
+  ></script>
 </html>
