--- a/aboutme.html
+++ b/aboutme.html
@@ -90,8 +90,8 @@
         </form> -->
       </div>
     </nav>
-    <div class="container mt-5 mb-5 ">
-      <div class="row ">
+    <div class="container border mt-5 mb-5 float-center">
+      <div class="row">
         <div class=" text-center col-sm-6 
         col-xs-12">
           <h1 id="test">Про меня</h1>
@@ -106,31 +106,32 @@
         spaidi218.
           </p>
         </div>
-        <div class="text-center col-sm-6 col-xs-12"><h1>Соцсети в которых вы можете меня найти:</h3>
+        <div class="text-center col-sm-6 col-xs-12">
+          <!-- <h1>Соцсети в которых вы можете меня найти:</h3> -->
           <!-- <p class="mt-3">instagram: llirik_for_life</p>
           <p>youtube: Kirill1us</p>
           <p>vk: Кирилл Семёнов</p>
           <p>steam: spaidi218</p></div></div> -->
-            <a
+            <!-- <a
               href="https://www.instagram.com/llirik_for_life/"
               target="_blank"
               class="fa fa-instagram"
-            ></a>
+            ></a> -->
             <!-- <p>instagram: llirik_for_life</p> -->
-            <a
+            <!-- <a
               href="https://www.youtube.com/channel/UCh18hXz_eIEyIAHRoI4EEKA"
               target="_blank"
               class="fa fa-youtube"
-            ></a>
+            ></a> -->
             <!-- <p>youtube: Kirill1us</p> -->
-            <a class="fa fa-vk" target="_blank" href=""></a>
+            <!-- <a class="fa fa-vk" target="_blank" href=""></a> -->
             <!-- <p>vk: Кирилл Семёнов</p> -->
             <!-- <button style="font-size: 24px;"><i class="fa fa-steam"></i></button> -->
-            <a
+            <!-- <a
               href="https://steamcommunity.com/profiles/76561199049462440/"
               target="_blank"
               class="fa fa-steam"
-            ></a>
+            ></a> -->
             <!-- <p>steam: spaidi218</p> -->
       </div>
       <div class="row">
