--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
         </ul>
       </div>
     </nav>
-    <div class="container border mt-3 ml-3 mb-1 p-3 float-left">
+    <div class="container border mt-3 ml-3 mb-1 p-3 float-right">
       <div class="row d-flex justify-content-center">
-        <div class="text-left col-xs-12 col-md-10">
+        <div class="text-right col-xs-12 col-md-10">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec
             odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla
