--- a/aboutme.html
+++ b/aboutme.html
@@ -90,12 +90,21 @@
         </form> -->
       </div>
     </nav>
-    <div class="container border mt-5 mb-5 float-center">
-      <div class="row">
-        <div class=" text-center col-sm-6 
-        col-xs-12">
-          <h1 id="test">Про меня</h1>
-          <p class="mt-3">
+    <div class="aimnoborder container border mt-5 mb-5 float-center ">
+      <div class="row d-flex justify-content-center">
+        <div class=" text-center 
+        col-xs-10">
+          <h1 id="test" class="pt-3 myp">Про меня</h1>
+          <div class="col-xs-8">
+          <img
+          class="img-fluid mt-3 picture"
+          src="img/cs2.jpg"
+          alt="Card image cap"
+          
+        />
+      </div>
+
+          <p class="text-center p-3">
             Меня зовут Кирилл Семёнов и мне 12 лет. Я живу в Киеве (Украина).
         Получаю знания в 157 лицее. У меня много друзей и я часто с ними гуляю и
         общаюсь. Я живу с родителями, моя сестра учиться в Берлине. Занимаюсь
@@ -154,7 +163,7 @@
     <footer class="footer mt-auto py-2">
       <div class="container">
         <span class="text-muted">&copy;Kirill Semenov</span>
-      </div>
+      </div>  
     </footer>
   </body>
   <script
