--- a/myprojects.html
+++ b/myprojects.html
@@ -57,7 +57,7 @@
     </nav>
     <div class="container mt-5 mb-5 p-3">
       <div class="row p-3 d-flex justify-content-center">
-        <div class="card col-xs-11 col-md-3">
+        <div class="card col-xs-12 col-md-3 m-1">
           <img
             class="card-img-top img-fluid mt-3"
             src="img/program.png"
@@ -71,87 +71,31 @@
             </p>
           </div>
         </div>
-        <div class="card col-xs-11 col-md-3 ml-5 mr-5">
-          <!-- <img class="card-img-top" src="..." alt="Card image cap" /> -->
+        <div class="card col-xs-12 col-md-3 m-1">
+          <img
+            class="card-img-top img-fluid mt-3"
+            src="img/program.png"
+            alt="Card image cap"
+          />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Coding: web-site</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              Это мой первый проект в кодинге. Я написал его на html, css и
+              использовал фреймворк bootstrap
             </p>
           </div>
         </div>
-        <div class="card col-xs-11 col-md-3">
-          <!-- <img class="card-img-top" src="..." alt="Card image cap" /> -->
+        <div class="card col-xs-12 col-md-3 m-1">
+          <img
+            class="card-img-top img-fluid mt-3"
+            src="img/program.png"
+            alt="Card image cap"
+          />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Coding: web-site</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="row p-3 d-flex justify-content-center">
-        <div class="card col-xs-11 col-md-3">
-          <!-- <img class="card-img-top" src="..." alt="Card image cap" /> -->
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-          </div>
-        </div>
-        <div class="card col-xs-11 col-md-3 ml-5 mr-5">
-          <!-- <img class="card-img-top" src="..." alt="Card image cap" /> -->
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-          </div>
-        </div>
-        <div class="card col-xs-12 col-md-3">
-          <!-- <img class="card-img-top" src="..." alt="Card image cap" /> -->
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="row p-3 d-flex justify-content-center">
-        <div class="card col-xs-11 col-md-3">
-          <!-- <img class="card-img-top" src="..." alt="Card image cap" /> -->
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-          </div>
-        </div>
-        <div class="card col-xs-11 col-md-3 ml-5 mr-5">
-          <!-- <img class="card-img-top" src="..." alt="Card image cap" /> -->
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-          </div>
-        </div>
-        <div class="card col-xs-11 col-md-3">
-          <!-- <img class="card-img-top" src="..." alt="Card image cap" /> -->
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              Это мой первый проект в кодинге. Я написал его на html, css и
+              использовал фреймворк bootstrap
             </p>
           </div>
         </div>
