--- a/aboutme.html
+++ b/aboutme.html
@@ -90,7 +90,7 @@
         </form> -->
       </div>
     </nav>
-    <div class="aimnoborder container border mt-5 mb-5 float-center ">
+    <div class="container border mt-3 mb-3 float-center ">
       <div class="row d-flex justify-content-center">
         <div class=" text-center 
         col-xs-10">
@@ -104,7 +104,7 @@
         />
       </div>
 
-          <p class="text-center p-3">
+          <p class="p-3">
             Меня зовут Кирилл Семёнов и мне 12 лет. Я живу в Киеве (Украина).
         Получаю знания в 157 лицее. У меня много друзей и я часто с ними гуляю и
         общаюсь. Я живу с родителями, моя сестра учиться в Берлине. Занимаюсь
