--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
         </ul>
       </div>
     </nav>
-    <div class="container border mt-3 ml-3 mb-1 p-3 float-right">
+    <div class="container mt-2 ml-2 mb-1 p-3 float-right">
       <div class="row d-flex justify-content-center">
-        <div class="text-right col-xs-12 col-md-10">
+        <div class="p text-right col-xs-12 col-md-10">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec
             odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla
@@ -98,7 +98,40 @@
         </div>
       </div>
     </div>
-    <div></div>
+    <div class="container mt-4 mr-2 mb-4 p-3 float-left">
+      <div class="row d-flex justify-content-center">
+        <div class="p text-left col-xs-12 col-md-10">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec
+            odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla
+            quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent
+            mauris. Fusce nec tellus sed augue semper porta. Mauris massa.
+            Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad
+            litora torquent per conubia nostra, per inceptos himenaeos.
+            Curabitur sodales ligula in libero. Sed dignissim lacinia nunc.
+            Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem
+            at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut
+            ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel,
+            suscipit quis, luctus non, massa. Fusce ac turpis quis ligula
+            lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel,
+            tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit.
+            Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+            per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non
+            tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante
+            quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc
+            feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin
+            quam. Etiam ultrices. Suspendisse in justo eu magna luctus suscipit.
+            Sed lectus. Integer euismod lacus luctus magna. Quisque cursus,
+            metus vitae pharetra auctor, sem massa mattis sem, at interdum magna
+            augue eget diam. Vestibulum ante ipsum primis in faucibus orci
+            luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie
+            dui. Praesent blandit dolor. Sed non quam. In vel mi sit amet augue
+            congue elementum. Morbi in ipsum sit amet pede facilisis laoreet.
+            Donec lacus nunc, viverra nec.
+          </p>
+        </div>
+      </div>
+    </div>
     <!-- <aside>
       <p>Соцсети в которых вы можете меня найти:</p>
       <a
