--- a/aboutme.html
+++ b/aboutme.html
@@ -108,11 +108,11 @@
             Меня зовут Кирилл Семёнов и мне 12 лет. Я живу в Киеве (Украина).
         Получаю знания в 157 лицее. У меня много друзей и я часто с ними гуляю и
         общаюсь. Я живу с родителями, моя сестра учиться в Берлине. Занимаюсь
-        спортом: волейбол, хожу в басейн, выхожу ан пробежку каждое утро. Также,
-        я занимаюсь програмированием и 3D моделированием. Хожу на дополнительные
+        спортом: волейбол, хожу в басейн, выхожу на пробежку каждое утро. Также,
+        я занимаюсь програмированием. Хожу на дополнительные
         уроки по немецкому и английскому языкам. Играю в копмьютерные игры,
         такие как: CS:GO и Assassin's creed. Вы можете узнать меня под ником
-        spaidi218.
+        "История о spaidi218".
           </p>
         </div>
         <div class="text-center col-sm-6 col-xs-12">
