--- a/myprojects.html
+++ b/myprojects.html
@@ -74,28 +74,28 @@
         <div class="card col-xs-12 col-md-3 m-1">
           <img
             class="card-img-top img-fluid mt-3"
-            src="img/program.png"
+            src="img/comp.jpg"
             alt="Card image cap"
           />
           <div class="card-body">
-            <h5 class="card-title">Coding: web-site</h5>
+            <h5 class="card-title">Hobbies: sport</h5>
             <p class="card-text">
-              Это мой первый проект в кодинге. Я написал его на html, css и
-              использовал фреймворк bootstrap
+              Иногда я учавствую в разных соревнованиях по волейболу или водмым
+              видам спорта.
             </p>
           </div>
         </div>
         <div class="card col-xs-12 col-md-3 m-1">
           <img
             class="card-img-top img-fluid mt-3"
-            src="img/program.png"
+            src="img/skins.jpg"
             alt="Card image cap"
           />
           <div class="card-body">
-            <h5 class="card-title">Coding: web-site</h5>
+            <h5 class="card-title">Hobbies: computer games</h5>
             <p class="card-text">
-              Это мой первый проект в кодинге. Я написал его на html, css и
-              использовал фреймворк bootstrap
+              Иногда я пытаюсь создать свой скин с помощью photoshope из игры
+              cs:go, в надежде что он комуто понравиться и за него проголосуют.
             </p>
           </div>
         </div>
