--- a/aboutme.html
+++ b/aboutme.html
@@ -99,9 +99,7 @@
           <img
           class="img-fluid mt-3 picture"
           src="img/cs2.jpg"
-          alt="Card image cap"
-          
-        />
+          alt="Card image cap"/>
       </div>
 
           <p class="p-3">
