--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
     <div class="container mt-2 ml-2 mb-1 p-3 float-center">
       <div class="row d-flex justify-content-center">
         <div class="p text-center col-xs-12 col-md-10">
-          <h1>Сайт визитка Кирилла Семёнова</h1>
+          <h1><span class="anim-left"> Сайт визитка</span> <span class="anim-right"> Кирилла Семёнова</span></h1>
         </div>
       </div>
     </div>
     <div class="container mt-2 ml-2 mb-1 p-3 float-right">
       <div class="row d-flex justify-content-center">
         <div class="p text-right col-xs-12 col-md-10">
-          <h3>
+          <h3 class="anim">
             Это сайт визитка Кирилла Семёнова. В этом сайте я расскажу о себе,
             например: что я люблю делать.
           </p>
@@ -84,7 +84,7 @@
     <div class="container mt-4 mr-2 mb-4 p-3 float-left">
       <div class="row d-flex justify-content-center">
         <div class="p text-left col-xs-12 col-md-10">
-          <h3>
+          <h3 class="anim2">
             Здесь я расскажу про себя, про свои проекты и обьясню как со мной
             можно связаться.
           </p>
